--- a/src/styles/Noodle.css
+++ b/src/styles/Noodle.css
@@ -18,7 +18,7 @@
     top: 0;
     left: 0;
     right: 0;
-    height: 70px;
+    height: 100px;
     display: flex;
     align-items: center;
     background-color: #000000;
@@ -26,8 +26,11 @@
   }
   
   .header__logo {
-    width: 100px;
-    margin-left: 20px;
+    padding: 10px;
+    width: 7% ;
+    margin-left : 90px;
+    margin-right : 80px
+    
   }
   
   /* Style de la barre de navigation */
@@ -38,15 +41,18 @@
   }
   
   .navbar__item {
-    font-size: 18px;
+    padding : 15px;
+    font-size: 20px;
     font-weight: bold;
     margin-right: 15px;
     cursor: pointer;
   }
   
   .navbar__item:hover {
-    color: #e50914;
+    color: #d4d4d4;
   }
+
+
   
   /* Style de la bannière principale */
   .banner {
