--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -16,6 +16,8 @@
 
 .image-wrapper {
     flex-shrink: 0;
+    max-width: 400px;
+    max-height: 300px;
     width: 300px;
     height: 200px;
     border: 0px solid #ccc;
@@ -24,15 +26,21 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    overflow: hidden;
     flex-direction: column;
     position: relative;
+    overflow: hidden;
 }
 
 .carousel-image {
     max-width: 100%;
     max-height: 100%;
     object-fit: cover;
+    transition: transform 0.2s ease;
+}
+
+.image-wrapper:hover .carousel-image {
+    transform: scale(1.3);
+    height: 900px;
 }
 
 .carousel-button {
@@ -40,7 +48,9 @@
     height: 100px;
     border: 0px;
     font-size: 40px;
-    opacity: 30%;
+    color: white;
+    opacity: 10%;
+    background-color: rgb(0, 0, 0, 0);
 }
 
 .carousel-button:hover {
