--- a/src/styles/Noodle.css
+++ b/src/styles/Noodle.css
@@ -51,8 +51,12 @@
   .navbar__logo {
     padding : 15px;
     font-weight: bold;
-    margin-right: 15px;
     cursor: pointer;
+    height:auto;
+    width:7%;
+    margin-left : 90px;
+    margin-right : 80px;
+    font-size:20px;
   }
   
   .navbar__item:hover {
