--- a/src/styles/Carousel.css
+++ b/src/styles/Carousel.css
@@ -4,7 +4,9 @@
 }
 
 .carousel-container {
+    height: 340px;
     display: flex;
+    align-items: center;
     overflow-x: scroll;
     scrollbar-width: none; /* Hide scrollbar for Firefox */
     -ms-overflow-style: none; /* Hide scrollbar for IE and Edge */
@@ -16,13 +18,11 @@
 
 .image-wrapper {
     flex-shrink: 0;
-    max-width: 400px;
-    max-height: 300px;
     width: 300px;
     height: 200px;
     border: 0px solid #ccc;
     border-radius: 5px;
-    margin-right: 15px;
+    margin-right: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,9 +38,10 @@
     transition: transform 0.2s ease;
 }
 
-.image-wrapper:hover .carousel-image {
-    transform: scale(1.3);
-    height: 900px;
+.image-wrapper:hover {
+    transform: scale(1.7);
+    transition: transform 0.2s ease;
+    z-index: 1;
 }
 
 .carousel-button {
