--- a/src/styles/Noodle.css
+++ b/src/styles/Noodle.css
@@ -59,7 +59,12 @@
     color: #d4d4d4;
   }
 
-
+  /* Style de la Searchbar */
+  .search {
+    width: 200%;
+    background-color: #ffffff; /* TODO : Trouver un moyen de rendre ça joli */
+    border-radius: 5px 5px 0px 0px;
+  }
   
   /* Style de la bannière principale */
   .banner {
